# CycleGAN_V2

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
CycleGAN/: __init__.py  predict_model.py  train_model.py
CycleGAN/config/: config.yaml
CycleGAN/models/: autoencoder.py  discriminator.py  generator.py
